@@ -4,6 +4,7 @@
   __.__.2020:
   - xms block move function speed-up.
   - optionally place page dir at the end of first memory block.
+  - return DX=0 if emb allocation fails (XMS spec).
   29.10.2020: v3.50
   - fixed: if a memory block beyond 4 GB was reallocated and had to be
     "moved" (because its size increased and there was no free space "behind"
